kubernetes/frontend.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
  namespace: default
  labels:
    app: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: sectest-frontend
      containers:
      - name: frontend
        image: docker.io/smiyoshi/sectest-frontend:latest
#        imagePullPolicy: Always
        ports:
          - containerPort: 4567
        resources:
          requests:
            cpu: 10m
            memory: 20Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
  namespace: default
spec:
  ports:
  - name: http
    port: 4567
    targetPort: 4567
  type: ClusterIP
  selector:
    app: frontend
