kubernetes/front-end-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front-end
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: frontend-tls
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: front-end
          servicePort: 4567
      - path: /data
        backend:
          serviceName: front-end
          servicePort: 4567
