kubernetes/front-end.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: front-end
  namespace: default
  labels:
    app: front-end
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
      - name: front-end
        image: docker.io/smiyoshi/sectest-frontend:latest
#        imagePullPolicy: Always
        ports:
          - containerPort: 4567
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    app: front-end
  namespace: default
spec:
  ports:
  - name: http
    port: 4567
    targetPort: 4567
  type: ClusterIP
  selector:
    app: front-end
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front-end
  annotations:
#    kubernetes.io/ingress.class: "istio"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: frontend-tls
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: front-end
          servicePort: 4567
      - path: /data
        backend:
          serviceName: front-end
          servicePort: 4567
